* Check only for libs via Devel::CheckLib in Makefile.PL (pali)
* Remove param --with-mysql from Makefile.PL documentation (pali)
* Check if specified Makefile.PL settings are working (pali)
   Fixes https://rt.cpan.org/Ticket/Display.html?id=119902
* Remember mysql_config value for Makefile.PL (pali)
* Locate MySQL libs using Devel::CheckLib (pali)


2018-02-08 Patrick Galbraith, Michiel Beijen, DBI/DBD community (4.046)
* Version bump because of issue with META file in 4.045 release.


2018-02-06 Patrick Galbraith, Michiel Beijen, DBI/DBD community (4.045)
* Use API function for reconnect; fixes compilation on MariaDB 10.2.6+.
  Fix provided by Pali.
* Fixed broken link to MySQL download page, provided by Mohammad S Anwar.
* Spelling fixes, provided by Ville Skyttä.


2018-01-22 Patrick Galbraith, Michiel Beijen, DBI/DBD community (4.044)
* Reapply https://github.com/perl5-dbi/DBD-mysql/pull/114
  "Improve SSL settings, reflect changes for BACKRONYM and
  Riddle vulnerabilities, enforce SSL encryption when mysql_ssl=1 is set"
  Thank you to Pali Rohar, Daniël van Eeden, Booking.com, et al:w
* Fix parsing configure libs from mysql_config --libs output in Makefile.PL
  Libraries in mysql_config --libs output can be specified by library name
  with the -l prefix or by absolute path to library name without any prefix.
  Parameters must start with a hyphen, so treat all options without leading
  hyphen in mysql_config --libs output as libraries with full path.
  Partially fixes bug https://rt.cpan.org/Public/Bug/Display.html?id=100898
  Fix by Pali Rohár.
* Return INTs with ZEROFILL as strings. Reported by Knarf, fix by Pali Rohár.
   https://rt.cpan.org/Public/Bug/Display.html?id=118977
* Correct require on relative path for perl 5.26. Fix by Grinnz.
   https://github.com/perl5-dbi/DBD-mysql/pull/136

2017-06-29 Patrick Galbraith, Michiel Beijen, DBI/DBD community (4.043)

YOUR ATTENTION PLEASE, THIS IS A REVERT TO 4.041